# QueuePulse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt
api/: main.py
api/db/: database.py  models.py
api/schemas/: webhook_schema.py
api/services/: kafka_producer.py  metrics.py  redis_pubsub.py
api/websocket/: manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: ActivityFeed.jsx  CreateWebhookModal.jsx  Header.jsx  MetricCard.jsx  Sidebar.jsx  StatusBadge.jsx  WebhookTable.jsx
frontend/src/hooks/: useCreateWebhook.js  useWebhooks.js
frontend/src/pages/: Dashboard.jsx
frontend/src/services/: api.js  websocket.js
frontend/src/utils/: formatters.js  statusConfig.js
shared/: config.py
shared/schemas/: job_schema.py
worker/: consumer.py  db.py  delivery_service.py  dlq_producer.py  redis_publisher.py
