[project]
name = "pulsequeue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
